fix: contrast for todo and address book pages

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -537,4 +537,12 @@ h6 {
   #next-steps a:focus-visible {
     outline: 2px solid var(--accent);
   }
+
+  .btn-delete {
+    background-color: #d54141;
+  }
+
+  .btn-add-contact{
+    background-color: #2a882a;
+  }
 }
